# cosmic-data-explorer

./: .gitignore  Cargo.toml  LICENSE  README.md
.superpowers/sdd/: task-1-report.md
apps/macos/: Package.swift
apps/macos/Sources/CosmicDataExplorerMac/: CosmicDataExplorerApp.swift
apps/macos/Sources/CosmicDataExplorerMacCore/: AppWindowFactory.swift  ConnectionStore.swift  ConnectionWorkspaceStore.swift  ContentView.swift  Models.swift  NativeBridge.swift  SettingsView.swift
apps/macos/Tests/CosmicDataExplorerMacCoreTests/: AppLaunchContractTests.swift  ConnectionStoreTests.swift  ConnectionWorkspaceStoreTests.swift  ContentViewContractTests.swift  NativeBridgeTests.swift  PackageManifestContractTests.swift
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: main.rs
crates/desktop/tests/: ui_contract.rs
crates/desktop/ui/: app.slint
crates/engine/: Cargo.toml
crates/engine/src/: credentials.rs  database.rs  domain.rs  error.rs  highlight.rs  lib.rs  storage.rs
crates/engine/tests/: connection_string.rs  credentials_storage_highlight.rs  domain.rs  sqlite_connector.rs
crates/native-bridge/: Cargo.toml
crates/native-bridge/src/: lib.rs
crates/native-bridge/tests/: connection_creation.rs  ffi_contract.rs
docs/superpowers/plans/: 2026-06-27-active-connection-tabs.md  2026-06-27-connection-session-reuse.md  2026-06-27-dark-workbench-ui.md  2026-06-27-full-height-row-detail-panel.md  2026-06-27-github-readme-refresh.md  2026-06-27-native-macos-release-app-script.md  2026-06-27-native-macos-shell.md  2026-06-27-row-detail-inspector.md  2026-06-27-rust-desktop-bootstrap.md
docs/superpowers/specs/: 2026-06-27-active-connection-tabs-design.md  2026-06-27-connection-session-reuse-design.md  2026-06-27-dark-workbench-ui-design.md  2026-06-27-full-height-row-detail-panel-design.md  2026-06-27-github-readme-refresh-design.md  2026-06-27-native-macos-release-app-script-design.md  2026-06-27-native-macos-shell-design.md  2026-06-27-row-detail-inspector-design.md  2026-06-27-rust-desktop-stack-design.md
scripts/: build-release-app.sh  test-release-app-script.sh
