[workspace]
members = ["crates/desktop", "crates/engine", "crates/native-bridge"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Cosmic Data Explorer contributors"]

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
directories = "6.0"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = "1.16.1"
slint-build = "1.16.1"
percent-encoding = "2"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "json",
    "uuid",
] }
syntect = "5.3"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
